--- a/html/about.html
+++ b/html/about.html
@@ -40,7 +40,7 @@
                     <h1>НС Строй</h1>
                     <p>НС Строй 2024 ЕООД е строително-ремонтна компания. 
                         Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме. Нашият екип от опитни професионалисти работи неуморно в Плевенския регион и цяла България, за да предостави висококачествени строително-ремонтни услуги, които надхвърлят очакванията на нашите клиенти. С фокус върху иновациите, устойчивостта и вниманието към детайлите, ние се стремим да създаваме пространства, които вдъхновяват и издържат във времето.
-                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството.С екипа на НС Строй 2024 ЕООД можете да бъдете уверени, че вашата визия ще се превърне в реалност.
+                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството.С екипа на НС Строй 2024 можете да бъдете уверени, че вашата визия ще се превърне в реалност.
                     </p>
                     <div class="contact-button">
                         <a href="/html/contact.html">Контакти</a>
@@ -67,38 +67,59 @@
             </section>
         </div>
 
-        <div class="why-us container">
-            <div class="three-reasons-why-us">
-                <h1 class="why-us-title"> Защо да изберете NS Build?</h1>
+        <div class="why-us-container">
+            <div class="why-us-title">
+                <h1>Защо да изберете NS Build?</h1>
                 <h3>Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме.</h3>
-                <section class="why-choose-grid">
-                    <div class="why-choose-item">
-                        <img src="/assets/Images/common/construction.png" alt="construction materials">
-                        <h3>Качествени материали</h3>
-                        <p>
-                            Използваме само висококачествени и сертифицирани материали, което гарантира дълготрайност и надеждност на всяка построена от нас сграда.
-                        </p>
-                    </div>
-                    <div class="why-choose-item">
-                        <img src="/assets/Images/common/workers.png" alt="Profile Picture">
-                        <h3>Дългогодишен опит и експертиза</h3>
-                        <p>
-                            Имаме висококвалифициран екип от инженери, архитекти и строителни работници, които са експерти в своята област.
-                        </p>
-                    </div>
-                    <div class="why-choose-item">
-                        <img src="/assets/Images/common/warranty.png" alt="Profile Picture">
-                        <h3>Гаранция и поддръжка</h3>
-                        <p>
-                            Предоставяме гаранция за извършената работа и предлагаме последваща поддръжка за всички наши проекти.
-                        </p>
-                    </div>
-                </section>
             </div>
+            <section class="why-us-section">
+                <div class="why-choose-card">
+                    <img src="/assets/Images/common/ns-logo.png" alt="construction materials">
+                    <h3>Качествени материали</h3>
+                    <p>
+                        Използваме само висококачествени и сертифицирани материали, което гарантира дълготрайност и надеждност на всяка построена от нас сграда.
+                    </p>
+                </div>
+                <div class="why-choose-card">
+                    <img src="/assets/Images/common/ns-logo.png" alt="Profile Picture">
+                    <h3>Дългогодишен опит и експертиза</h3>
+                    <p>
+                        Имаме висококвалифициран екип от инженери, архитекти и строителни работници, които са експерти в своята област.
+                    </p>
+                </div>
+                <div class="why-choose-card">
+                    <img src="/assets/Images/common/ns-logo.png" alt="Profile Picture">
+                    <h3>Гаранция и поддръжка</h3>
+                    <p>
+                        Предоставяме гаранция за извършената работа и предлагаме последваща поддръжка за всички наши проекти.
+                    </p>
+                </div>
+                <div class="why-choose-card">
+                    <img src="/assets/Images/common/ns-logo.png" alt="Sustainability">
+                    <h3>Устойчивост и екологичност</h3>
+                    <p>
+                        Прилагане на екологични практики и устойчиви технологии, които минимизират въздействието върху околната среда.
+                    </p>
+                </div>
+                <div class="why-choose-card">
+                    <img src="/assets/Images/common/ns-logo.png" alt="Innovation">
+                    <h3>Иновации и модерни технологии</h3>
+                    <p>
+                        Инвестиране в нови технологии и иновации, които повишават ефективността и качеството на строителните процеси.
+                    </p>
+                </div>
+                <div class="why-choose-card">
+                    <img src="/assets/Images/common/ns-logo.png" alt="Customer Service">
+                    <h3>Отлично обслужване на клиенти</h3>
+                    <p>
+                        Осигуряваме индивидуален подход и професионално обслужване на всеки клиент, като се стремим да надминем очакванията им.
+                    </p>
+                </div>
+            </section>
         </div>
 
         <!-- Reviews -->
-         
+         <div class="reviews-container">
         <h1 class="review-title">Какво казват клиентите за нас</h1>
         <div class="reviews-carousel">
                 <div class="reviews">
@@ -176,6 +197,7 @@
                     </div>
         </div>
     </div>
+</div>
     </main>
     
 
