--- a/html/footer.html
+++ b/html/footer.html
@@ -2,23 +2,23 @@
     <div class="footer-content">
         <div class="for-us">
             <img class="logo" src="/assets/Images/common/ns-logo-white.png" alt="NS Stroi Logo">
-            <p>Ние в НС Строй се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме с нашият екип от опитни професионалисти. </p>
+            <p>Ние в НС Строй се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме с нашият екип от опитни професионалисти.</p>
         </div>
         
         <div class="services">
-            <a href="/services.html"><h3>УСЛУГИ</h3></a>
+            <h3><a href="/html/services.html">УСЛУГИ</a></h3>
             <ul>
-                <a href="/services.html"><li>ВиК</li></a>
-                <a href="/services.html"><li>Баня</li></a>
-                <a href="/services.html"><li>Електро</li></a>
-                <a href="/services.html"><li>Външна изолация</li></a>
-                <a href="/services.html"><li>Шпакловки</li></a>
-                <a href="/services.html"><li>Окачени тавани</li></a>
+                <li><a href="/html/services.html">ВиК</a></li>
+                <li><a href="/html/services.html">Баня</a></li>
+                <li><a href="/html/services.html">Електро</a></li>
+                <li><a href="/html/services.html">Външна изолация</a></li>
+                <li><a href="/html/services.html">Шпакловки</a></li>
+                <li><a href="/html/services.html">Окачени тавани</a></li>
             </ul>
         </div>
         
         <div class="contact-info">
-            <h3>КОНТАКТИ</h3>
+            <h3><a href="/html/contact.html">КОНТАКТИ</a></h3>
             <ul>
                 <li>
                     <a href="https://www.google.com/maps/place/%D0%9F%D0%BB%D0%B5%D0%B2%D0%B5%D0%BD+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D1%83%D0%BB.+%D0%A6%D0%B0%D1%80+%D0%91%D0%BE%D1%80%D0%B8%D1%81+III+12,+5800+%D0%9F%D0%BB%D0%B5%D0%B2%D0%B5%D0%BD,+%D0%91%D1%8A%D0%BB%D0%B3%D0%B0%D1%80%D0%B8%D1%8F/@43.411206,24.617866,16z/data=!4m6!3m5!1s0x40ab8b4d03b14cb7:0x7440b904fdbf92ec!8m2!3d43.4112085!4d24.6178999!16s%2Fg%2F11c1_gkgg6?hl=bg&entry=ttu">
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tel:087 771 7700">
+                    <a href="tel:0877717700">
                         <img src="/assets/Images/common/telephone.png" alt="Ns Stroi phone">
                         <p>087 771 7700</p>
                     </a>
@@ -53,27 +53,28 @@
             </ul>
         </div>
 
-        <div class="working-time">
-            <h3>РАБОТНО ВРЕМЕ</h3>
+        <div class="partners-info">
+            <h3><a href="/html/partners.html">ПАРТНЬОРИ</a></h3>
             <ul>
-                <li>Понеделник: 9:00 – 18:00</li>
-                <li>Вторник: 9:00 – 18:00</li>
-                <li>Сряда: 9:00 – 18:00</li>
-                <li>Четвъртък: 9:00 – 18:00</li>
-                <li>Петък: 9:00 – 18:00</li>
-                <li>Събота: Затворено</li>
-                <li>Неделя: Затворено</li>
+                <li><a href="/html/partners.html">Benjamin Moore</a></li>
+                <li><a href="/html/partners.html">Ламинати AGT</a></li>
+                <li><a href="/html/partners.html">Brezza Di Colori</a></li>
+                <li><a href="/html/partners.html">Dessa Decor</a></li>
+                <li><a href="/html/partners.html">Картини от Стъкло</a></li>
+                <li><a href="/html/partners.html">Стенни профили от МДФ</a></li>
+                <li><a href="/html/partners.html">3D Панели</a></li>
             </ul>
         </div>
     </div>
     <div class="copyright">
-        <p>Всички права запазени.</p>
+        <p>Всички права запазени &ndash; НС Строй 2024 &copy;</p>
+        <a id="developed-by" href="tel:0877226994"><h3>Изработено от Евелин Първанов</h3></a>
         <div class="social-links">
             <ul>
-                <li><a href="tel:087 771 7700"><img src="/assets/Images/common/telephone.png"></a></li>
-                <li><a href="mailto:info@nsbuild.eu"><img src="/assets/Images/common/email.png"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=61555637235665"><img src="/assets/Images/common/facebook.png"></a></li>
-                <li><a href="https://www.instagram.com/ns_build2024/"><img src="/assets/Images/common/instagram.png"></a></li>
+                <li><a href="tel:0877717700"><img src="/assets/Images/common/telephone.png" alt="Phone icon"></a></li>
+                <li><a href="mailto:info@nsbuild.eu"><img src="/assets/Images/common/email.png" alt="Email icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=61555637235665"><img src="/assets/Images/common/facebook.png" alt="Facebook icon"></a></li>
+                <li><a href="https://www.instagram.com/ns_build2024/"><img src="/assets/Images/common/instagram.png" alt="Instagram icon"></a></li>
             </ul>
         </div>
     </div>
