--- a/html/navbar.html
+++ b/html/navbar.html
@@ -23,9 +23,21 @@
             <a href="https://www.instagram.com/ns_build2024/">
                 <img src="/assets/Images/common/instagram.png" alt="ns build instagram">
             </a>
+            <a href="https://chat.whatsapp.com/JNpcU5lR4ae3tDnk5HNMDf">
+                <img src="/assets/Images/common/whatsapp.png" alt="ns build instagram">
+            </a>
+            <a href="https://t.me/+xITbG-x6yOVjZGZk">
+                <img src="/assets/Images/common/telegram.png" alt="ns build instagram">
+            </a>
+            <a href="https://www.google.com/url?q=http%3A%2F%2Ftinyurl.com%2F4b9e8jvx&sa=D&sntz=1&usg=AOvVaw1DF493k1Exmy_ZJvHvbiLu">
+                <img src="/assets/Images/common/viber.png" alt="ns build instagram">
+            </a>
+            <a href="https://www.pinterest.com/nsbuild2024/">
+                <img src="/assets/Images/common/pinterest.png" alt="ns build instagram">
+            </a>
         </nav>
         <nav class="nav-main">
-            <a href="#">
+            <a href="/">
                 <img class="logo" src="/assets/Images/common/ns-logo.png" alt="Ns Build Logo">
             </a>
             <div class="menu-toggle">
@@ -50,13 +62,13 @@
                 <li class="dropdown">
                     <a href="/html/partners.html" class="dropbtn">ПАРТНЬОРИ</a>
                     <div class="dropdown-content">
-                        <a href="/html/partners.html/benjamin-moore.html">Benjamin Moore</a>
-                        <a href="/html/partners.html/laminati-agt.html">Ламинати AGT</a>
-                        <a href="/html/partners.html/brezza-di-colori.html">Brezza Di Colori</a>
-                        <a href="/html/partners.html/dessa-decor.html">Dessa Decor</a>
-                        <a href="/html/partners.html/kartini-styklo.html">Картини от Стъкло</a>
-                        <a href="/html/partners.html/stenni-profili-mdf.html">Стенни Профили от МДФ</a>
-                        <a href="/html/partners.html/3d-paneli.html">3D Панели</a>
+                        <a href="/html/partners_templates/benjamin-moore.html">Benjamin Moore</a>
+                        <a href="/html/partners_templates/laminati-agt.html">Ламинати AGT</a>
+                        <a href="/html/partners_templates/brezza-di-colori.html">Brezza Di Colori</a>
+                        <a href="/html/partners_templates/dessa-decor.html">Dessa Decor</a>
+                        <a href="/html/partners_templates/kartini-styklo.html">Картини от Стъкло</a>
+                        <a href="/html/partners_templates/stenni-profili-mdf.html">Стенни Профили от МДФ</a>
+                        <a href="/html/partners_templates/3d-paneli.html">3D Панели</a>
                     </div>
                 </li>
                 <li><a href="/html/prices.html">ЦЕНИ</a></li>
