--- a/html/partners.html
+++ b/html/partners.html
@@ -30,6 +30,7 @@
     <div class="all-pages-title">
         <h1>ПАРТНЬОРИ</h1>
     </div>
+    
 
   <main>
     <div class="partners-container">
@@ -42,8 +43,8 @@
                 <h2>Премиум Бои и Лакове: Стандарт за Съвършенство</h2>
                 <p>Когато става въпрос за премиум бои и лакове за дома, ние сме определили стандарта за съвършенство. Ние произвеждаме собствени смоли и патентовани Gennex® оцветители, които осигуряват превъзходни резултати и свойства при нанасяне на всеки продукт. В комбинация с несравнимия ни избор от автентични цветове, нашите продукти са формулирани, за да ви помогнат да постигнете красиви и трайни резултати всеки път, когато боядисвате.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/benjamin-moore.html"><button class="learn-more-button">Научете повече</button></a>
+                    <a href="https://benjaminmoore.bg/bg/boi-1"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
@@ -57,8 +58,8 @@
                 <h2>Ламиниран паркет AGT: Хармония с природата и комфорт</h2>
                 <p>Ламинираният паркет AGT олицетворява перфектното съчетание между природа и естетика в интериора. Известен със своите незамърсяващи повърхности и екологично производство по стандарта E0, AGT гарантира по-здравословна жизнена среда чрез минимизиране на емисиите на формалдехид.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/laminati-agt.html"><button class="learn-more-button">Научете повече</button></a>
+                    <a href="https://rosi.bg/podovi-nastilki-189/laminiran-parket-207/"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
@@ -72,8 +73,8 @@
                 <h2>Brezza di Colori LTD: Естествени и Декоративни Бои за Вашия Дом</h2>
                 <p>Brezza di Colori LTD е компания, предлагаща естествени, декоративни бои и мазилки от вар и глина. Ние сме съсредоточени върху довършителните работи, интериорния и екстериорния дизайн в строителния сектор. Нашите продукти съчетават естетическата визия с качеството на микроклимата в обитаемата среда.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/brezza-di-colori.html" class="learn-more-button">Научете повече</button></a>
+                    <a href="https://brezzadicolori.com/magazin/"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
@@ -87,8 +88,8 @@
                 <h2>DESSA DECOR: Екологични и Достъпни Материали за Вашия Дом</h2>
                 <p>DESSA DECOR предлага екологични материали, които са изпитани и одобрени от ФБУЗ "Център по хигиена и епидемиология в град Москва". Съдържанието на вредни вещества в нашите продукти е по-малко от 1% от допустимата стойност за лечебни заведения, което гарантира безопасността им за здравето. Нашите продуктови линии за фасада и интериор са проектирани да ви спестят до 30% от разходите за подготвителни довършителни работи. Използваме висококачествени пълнители, като турски мрамор с 99% белота, което допълнително намалява разхода за материали. Оптимизираният ни склад позволява изпращане на поръчките в рамките на 6 часа от момента на подаване на заявката, осигурявайки бърза доставка "ден за ден". DESSA DECOR е достъпен продукт, създаден с цел да замени тапетите и да предложи качествени и красиви решения за всеки дом.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/dessa-decor.html"><button class="learn-more-button">Научете повече</button></a>
+                    <a href="https://decorative-plasters.com/collections/frontpage"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
@@ -102,8 +103,8 @@
                 <h2>DecorPi: Инновации в Модерния Декор от Темперирано Стъкло</h2>
                 <p>DecorPi започна с група хора, които искаха да създадат нещо ново. С визия и умения, ние предлагаме авангардни решения за декор от темперирано стъкло. Нашите картини и дъски придават дълбочина и магическа красота на изображенията, играещи със светлината. С внимателно отпечатани и опаковани произведения, нашите продукти са устойчиви на надрасквания и изкривявания. Използваме модерни UV печатни технологии за дълготрайни резултати.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/kartini-styklo.html class="learn-more-button">Научете повече</button></a>
+                    <a href="https://www.decorpi.com/collections/all?page=1"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
@@ -117,8 +118,8 @@
                 <h2>МДФ Профили за Мебели: Богат Асортимент и Висококачествени Материали</h2>
                 <p>Нашите МДФ профили за мебели предлагат богат избор от форми и цветове, които са идеални за всички ваши мебелни проекти. Изработени от висококачествен МДФ с PVC фолио или естествен фурнир, тези декоративни елементи осигуряват перфектно покритие и дълготрайност. Профилите с PVC покритие са налични в иновативни цветове, които отговарят на всеки вкус, докато фурнированите профили, покрити с различни видове дървесина, са идеални за съчетаване с фурнировани плоскости.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/stenni-profili-mdf.html"><button class="learn-more-button">Научете повече</button></a>
+                    <a href="https://rosi.bg/stenni-profili-ot-mdf-323/"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
@@ -132,8 +133,8 @@
                 <h2>3D Гипсови Панели Effet Marbella: Висококачествен Декор с Порцеланов Ефект</h2>
                 <p>Триизмерните гипсови панели на Effet Marbella са квадратни или правоъгълни плочи с декоративен модел и плосък гръб. Изработени от висококачествен гипс чрез автоматизирана технология, те осигуряват перфектно качество, което не може да бъде постигнато ръчно. Гипсовата смес се втвърдява в полиуретанови калъпи и след това се суши 24 часа. Процесът включва създаване на 3D модел с компютърна програма, изрязване на специална машина и финално усъвършенстване на матрицата. Използвани са нови германски технологии за постигане на уникален порцеланов ефект, без аналог в света.</p>
                 <div class="partner-info-btn">
-                    <button class="learn-more-button">Научете повече</button>
-                    <button class="learn-more-button">Пазарувай</button>
+                    <a href="/html/partners_templates/3d-paneli.html"><button class="learn-more-button">Научете повече</button></a>
+                    <a href="https://3dpana.eu/3d_%D0%BF%D0%B0%D0%BD%D0%B5%D0%BB%D0%B8-1432.html"><button class="learn-more-button">Пазарувай</button></a>
                 </div>
             </div>
         </div>
