--- a/html/services.html
+++ b/html/services.html
@@ -50,8 +50,8 @@
                 </div>
             </div>
             <aside class="image">
-                <img src="/assets/Images/common/main-image-v2.jpeg" alt="Construction image">
-                <footer class="contact-info">
+                <img src="/assets/Images/common/ns-logo.png" alt="NS Logo">
+                <footer class="contact-info-service">
                     <p>Трябва ви ремонт? Свържете се с нас!</p>
                     <a class="nav-info-link" href="mailto:info@nsbuild.eu">
                         <img src="/assets/Images/common/email-black.png" alt="ns build email">
@@ -80,33 +80,33 @@
             <div class="services-container">
                 <div class="service-card">
                     <h3 class="service-card-title">Външна изолация</h3>
-                    <!-- <img src="/assets/Images/common/house.png"> -->
+                    <!-- <img src="/assets/Images/common/ns-logo.png"> -->
                     <p class="service-card-description">Предлагаме цялостни решения за външна изолация на сгради, включително оценка на текущото състояние, нанасяне на изолационни материали и завършителни работи. Нашият екип осигурява висока ефективност и дълготрайност, които подобряват енергийния рейтинг на вашата сграда.
                     </p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Шпакловки</h3>
-                    <!-- <img src="/assets/Images/common/plastering.png"> -->
+                    <!-- <img src="/assets/Images/common/ns-logo.png"> -->
                     <p class="service-card-description">Извършваме професионални услуги по шпакловка, включително подготовка на стени и тавани, нанасяне на шпакловъчни смеси и финално изравняване на повърхности. Осигуряваме гладко и готово за боядисване или облицоване покритие.                    </p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Електро</h3>
-                    <!-- <img src="/assets/Images/common/electrical-energy.png"> -->
+                    <!-- <img src="/assets/Images/common/ns-logo.png"> -->
                     <p class="service-card-description">Нашата компания предлага изпълнение на електрически инсталации, включително монтаж на осветителни системи, електрически кабели, контакти и ключове. Нашите електротехници осигуряват безопасни и надеждни решения за всички ваши електрически нужди.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">ВиК</h3>
-                    <!-- <img src="/assets/Images/common/plumbing.png"> -->
+                    <!-- <img src="/assets/Images/common/ns-logo.png"> -->
                     <p class="service-card-description">Специализирани сме в изграждането и поддръжката на водопроводни и канализационни системи. Нашите услуги включват инсталация на тръби, фитинги, помпи и системи за отпадни води, осигурявайки надеждност и ефективност на водоснабдителните и канализационни мрежи.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Баня</h3>
-                    <!-- <img src="/assets/Images/common/bathroom.png"> -->
+                    <!-- <img src="/assets/Images/common/ns-logo.png"> -->
                     <p class="service-card-description">Предлагаме пълно изпълнение на строителни и ремонтни дейности за бани, включително инсталация на санитария, плочки и монтаж на мебели. Нашият опитен екип осигурява качествени решения и внимание към детайла за създаване на функционални и естетични бани.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Окачени тавани</h3>
-                    <!-- <img src="/assets/Images/common/ceiling.png"> -->
+                    <!-- <img src="/assets/Images/common/ns-logo.png"> -->
                     <p class="service-card-description">Специализирани сме в изграждане на окачени тавани, като предлагаме всичко необходимо за успешното им изпълнение. От инсталиране на структурни рамки до монтаж на декоративни панели и интегрирани осветителни решения, нашият опитен екип се грижи за всеки детайл, за да осигури приятен и функционален завършек.</p>
                 </div>
             </div>
@@ -122,35 +122,57 @@
     </div>
 
 
-      <div class="why-us container">
-        <div class="three-reasons-why-us">
-            <h1 class="why-us-title"> Защо да изберете NS Build?</h1>
+    <div class="why-us-container">
+        <div class="why-us-title">
+            <h1>Защо да изберете NS Build?</h1>
             <h3>Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме.</h3>
-            <section class="why-choose-grid">
-                <div class="why-choose-item">
-                    <img src="/assets/Images/common/construction.png" alt="construction materials">
-                    <h3>Качествени материали</h3>
-                    <p>
-                        Използваме само висококачествени и сертифицирани материали, което гарантира дълготрайност и надеждност на всяка построена от нас сграда.
-                    </p>
-                </div>
-                <div class="why-choose-item">
-                    <img src="/assets/Images/common/workers.png" alt="Profile Picture">
-                    <h3>Дългогодишен опит и експертиза</h3>
-                    <p>
-                        Имаме висококвалифициран екип от инженери, архитекти и строителни работници, които са експерти в своята област.
-                    </p>
-                </div>
-                <div class="why-choose-item">
-                    <img src="/assets/Images/common/warranty.png" alt="Profile Picture">
-                    <h3>Гаранция и поддръжка</h3>
-                    <p>
-                        Предоставяме гаранция за извършената работа и предлагаме последваща поддръжка за всички наши проекти.
-                    </p>
-                </div>
-            </section>
         </div>
-      </div>
+        <section class="why-us-section">
+            <div class="why-choose-card">
+                <img src="/assets/Images/common/ns-logo.png" alt="construction materials">
+                <h3>Качествени материали</h3>
+                <p>
+                    Използваме само висококачествени и сертифицирани материали, което гарантира дълготрайност и надеждност на всяка построена от нас сграда.
+                </p>
+            </div>
+            <div class="why-choose-card">
+                <img src="/assets/Images/common/ns-logo.png" alt="Profile Picture">
+                <h3>Дългогодишен опит и експертиза</h3>
+                <p>
+                    Имаме висококвалифициран екип от инженери, архитекти и строителни работници, които са експерти в своята област.
+                </p>
+            </div>
+            <div class="why-choose-card">
+                <img src="/assets/Images/common/ns-logo.png" alt="Profile Picture">
+                <h3>Гаранция и поддръжка</h3>
+                <p>
+                    Предоставяме гаранция за извършената работа и предлагаме последваща поддръжка за всички наши проекти.
+                </p>
+            </div>
+            <div class="why-choose-card">
+                <img src="/assets/Images/common/ns-logo.png" alt="Sustainability">
+                <h3>Устойчивост и екологичност</h3>
+                <p>
+                    Прилагане на екологични практики и устойчиви технологии, които минимизират въздействието върху околната среда.
+                </p>
+            </div>
+            <div class="why-choose-card">
+                <img src="/assets/Images/common/ns-logo.png" alt="Innovation">
+                <h3>Иновации и модерни технологии</h3>
+                <p>
+                    Инвестиране в нови технологии и иновации, които повишават ефективността и качеството на строителните процеси.
+                </p>
+            </div>
+            <div class="why-choose-card">
+                <img src="/assets/Images/common/ns-logo.png" alt="Customer Service">
+                <h3>Отлично обслужване на клиенти</h3>
+                <p>
+                    Осигуряваме индивидуален подход и професионално обслужване на всеки клиент, като се стремим да надминем очакванията им.
+                </p>
+            </div>
+        </section>
+    </div>
+    
     </main>
     
 
