--- a/html/contact.html
+++ b/html/contact.html
@@ -32,23 +32,49 @@
     </div>
 
     <main>
-        <div class="wrapper">
+        <div class="contact-page">
             <div class="contact-container">
-                <div class="contact-details">
-                    <h1>Контакти</h1>
-                    <p><a href="https://www.google.com/maps/place/%D0%9F%D0%BB%D0%B5%D0%B2%D0%B5%D0%BD+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D1%83%D0%BB.+%D0%A6%D0%B0%D1%80+%D0%91%D0%BE%D1%80%D0%B8%D1%81+III+12,+5800+%D0%9F%D0%BB%D0%B5%D0%B2%D0%B5%D0%BD,+%D0%91%D1%8A%D0%BB%D0%B3%D0%B0%D1%80%D0%B8%D1%8F/@43.411206,24.617866,16z/data=!4m6!3m5!1s0x40ab8b4d03b14cb7:0x7440b904fdbf92ec!8m2!3d43.4112085!4d24.6178999!16s%2Fg%2F11c1_gkgg6?hl=bg&entry=ttu"><span class="icon">📍</span> Плевен Център, ул. Цар Борис III 12</a></p>
-                    <p><a class="nav-info-link">📞</a> Плевен: <a href="tel:+359897666111">+359 877 717 700</a></p>
-                    <div class="working-hours">
-                        <p>Работно време:</p>
-                        <p>Понеделник – Петък :<strong>9:00 – 18:00 ч.</strong></p>
-                        <p>Събота, Неделя и Официални разници : <strong class="closed">почивни дни</strong></p>
+            <!-- Contact Info Section -->
+            <div class="contact-info-side">
+                    <h2>Свържете се с нас</h2>
+                    <p>Ние сме на разположение за всякакви предложения или просто за да си поговорим.</p>
+                    <ul>
+                        <li>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Адрес: Плевен Център, ул. Цар Борис III 12</span>
+                        </li>
+                        <li>
+                            <i class="fas fa-phone-alt"></i>
+                            <span>Телефон: <a href="tel:+359897666111">+359 877 717 700</a></span>
+                        </li>
+                        <li>
+                            <i class="fas fa-clock"></i>
+                            <span>Работно време: Понеделник – Петък: 9:00 – 18:00 ч.</span>
+                        </li>
+                        <li>
+                            <i class="fas fa-times-circle"></i>
+                            <span>Събота, Неделя и Официални празници: почивни дни</span>
+                        </li>
+                    </ul>
+                    <div class="contact-form-side">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5796.729438878954!2d24.617866!3d43.411206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40ab8b4d03b14cb7%3A0x7440b904fdbf92ec!2z0J_Qu9C10LLQtdC9INCm0LXQvdGC0YrRgCwg0YPQuy4g0KbQsNGAINCR0L7RgNC40YEgSUlJIDEyLCA1ODAwINCf0LvQtdCy0LXQvSwg0JHRitC70LPQsNGA0LjRjw!5e0!3m2!1sbg!2sus!4v1721289177810!5m2!1sbg!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-                <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5796.729438878954!2d24.617866!3d43.411206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40ab8b4d03b14cb7%3A0x7440b904fdbf92ec!2z0J_Qu9C10LLQtdC9INCm0LXQvdGC0YrRgCwg0YPQuy4g0KbQsNGAINCR0L7RgNC40YEgSUlJIDEyLCA1ODAwINCf0LvQtdCy0LXQvSwg0JHRitC70LPQsNGA0LjRjw!5e0!3m2!1sbg!2sus!4v1721289177810!5m2!1sbg!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+                <!-- Contact Form Section -->
+                <div class="contact-form">
+                    <h2>Изпратете ни съобщение</h2>
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Въведете имена" required>
+                        <input type="text" name="Email" placeholder="Въведете имейл">
+                        <input type="text" name="Phone" placeholder="Въведете телефон" required>
+                        <textarea name="Message" rows="6" placeholder="Съобщение" style="resize: none;"></textarea>
+                        <button type="submit" class="btn btn2">Изпрати</button>
+                        <span id="msg"></span>
+                    </form>
                 </div>
             </div>
-        </div>
+        </div>        
     </main>
 
     <div id="footer"></div>
