--- a/html/partners_templates/3d-paneli.html
+++ b/html/partners_templates/3d-paneli.html
@@ -20,48 +20,26 @@
             });
         }
         document.addEventListener("DOMContentLoaded", function() {
-            loadHTML("#footer", "footer.html");
-            loadHTML("#navbar-main", "navbar-main.html");
+            loadHTML("#navbar", "/html/navbar.html");
+            loadHTML("#footer", "/html/footer.html");
         });
-        </script>
+    </script>
 </head>
 <body>
-    <div id="navbar-main"></div>
-    <div class="image-container">
-      <div class="image-main"> 
-          <img src="Images/main-image-h1.jpeg" alt="NS Stroi" id="mainImage" class="small-main-image">
-          <div class="image-text">
-              <h1 class="no-home-page-text">Проекти</h1>
-          </div>
-          <script>
-              window.onload = function() {
-          // Your JavaScript code here
-          // Select the img element
-          const mainImage = document.getElementById('mainImage');
-
-          // Function to change image source based on screen width
-          function changeMainImage() {
-              const screenWidth = window.innerWidth;
-              const mobileMaxWidth = 500; // Adjust as needed
-
-              if (screenWidth <= mobileMaxWidth) {
-                  mainImage.src = 'Images/main-image-v2.jpeg'; // Path to mobile image
-              } else {
-                  mainImage.src = 'Images/main-image.jpeg'; // Default image for larger screens
-              }
-          }
-
-          // Call the function initially to set the image based on current screen size
-          changeMainImage();
-
-          // Event listener to handle window resize
-          window.addEventListener('resize', changeMainImage);
-      };
-          </script>
-      </div>
+    <div id="navbar"></div>
+    <div class="all-pages-title">
+        <h1>3D Панели</h1>
     </div>
-
     
+    <main>
+        <div class="partner-description-container">
+            <div class="partner-description">
+                <h1>За 3D Панели</h1>
+                <p>Ние сме водеща фирма на пазара за производство и продажба на стилни висококачествени гипсови 3D декоративни панели. Опитен и творчески  екип от дизайнери, технолози и мениджъри  които контролират процеса от момента на произхода на най-смелата идея до пълната му реализация.Нашата компания не само продава най-популярния довършителен материал но и го произвежда гарантирайки най-високо ниво на качество. За нас Вашата безопасност е важна, затова ние използваме изключително екологосъобразни материали при производството на нашите продукти.Всички наши продукти са сертифицирани и отговарят на определените стандарти за качество.Най-добрите цени  и набор от услуги за инсталиране и боядисване на 3D панели.Тук ще намерите най-оригиналните и модерни решения. Произвеждаме 3D пана и по специална поръчка на клиента.</p>
+                <a href="https://3dpana.eu/3d_%D0%BF%D0%B0%D0%BD%D0%B5%D0%BB%D0%B8-1432.html"><button class="learn-more-button">Пазарувай</button></a>
+            </div>
+        </div>
+    </main>
 
     <div id="footer"></div>
 </body>
