--- a/html/about.html
+++ b/html/about.html
@@ -33,38 +33,56 @@
     </div>
 
     <main>
-        <div class="about-us-main-container">
-            <section class="about-content">
-                <div class="text">
+        <div class="about-page">
+
+            <section class="company-overview">
+                <div class="company-description">
                     <h2>Кой сме ние?</h2>
                     <h1>НС Строй</h1>
                     <p>НС Строй 2024 ЕООД е строително-ремонтна компания. 
                         Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме. Нашият екип от опитни професионалисти работи неуморно в Плевенския регион и цяла България, за да предостави висококачествени строително-ремонтни услуги, които надхвърлят очакванията на нашите клиенти. С фокус върху иновациите, устойчивостта и вниманието към детайлите, ние се стремим да създаваме пространства, които вдъхновяват и издържат във времето.
-                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството.С екипа на НС Строй 2024 можете да бъдете уверени, че вашата визия ще се превърне в реалност.
+                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството. С екипа на НС Строй 2024 можете да бъдете уверени, че вашата визия ще се превърне в реалност.
                     </p>
-                    <div class="contact-button">
+                    <div class="contact-us-button">
                         <a href="/html/contact.html">Контакти</a>
                     </div>
                 </div>
-                <aside class="image">
-                    <img src="/assets/Images/common/main-image-v2.jpeg" class="image-info-about" alt="Construction image">
-                    <footer class="contact-info">
-                        <p>Трябва ви ремонт? Свържете се с нас!</p>
-                        <a class="nav-info-link" href="mailto:info@nsbuild.eu">
-                            <img src="/assets/Images/common/email-black.png" alt="ns build email">
-                        </a>
-                        <a class="nav-info-link" href="tel:087 771 7700">
-                            <img src="/assets/Images/common/telephone-black.png" alt="ns build phone">
-                        </a>
-                        <a href="https://www.facebook.com/profile.php?id=61555637235665">
-                            <img src="/assets/Images/common/facebook.png" alt="ns build facebook">
-                        </a>
-                        <a href="https://www.instagram.com/ns_build2024/">
-                            <img src="/assets/Images/common/instagram.png" alt="ns build instagram">
-                        </a>
-                    </footer>
+                <aside class="company-contact">
+                    <div class="contact-details">
+                        <p>Трябва ви ремонт?</p>
+                        <p>Свържете се с нас!</p>
+                        <div class="contact-icons">
+                            <a class="contact-link" href="mailto:info@nsbuild.eu">
+                                <img src="/assets/Images/common/email-black.png" alt="ns build email">
+                            </a>
+                            <a class="contact-link" href="tel:087 771 7700">
+                                <img src="/assets/Images/common/telephone-black.png" alt="ns build phone">
+                            </a>
+                            <a class="contact-link" href="https://www.facebook.com/profile.php?id=61555637235665">
+                                <img src="/assets/Images/common/facebook.png" alt="ns build facebook">
+                            </a>
+                            <a class="contact-link" href="https://www.instagram.com/ns_build2024/">
+                                <img src="/assets/Images/common/instagram.png" alt="ns build instagram">
+                            </a>
+                            <a class="contact-link" href="https://chat.whatsapp.com/JNpcU5lR4ae3tDnk5HNMDf">
+                                <img src="/assets/Images/common/whatsapp.png" alt="ns build instagram">
+                            </a>
+                            <a class="contact-link" href="https://t.me/+xITbG-x6yOVjZGZk">
+                                <img src="/assets/Images/common/telegram.png" alt="ns build instagram">
+                            </a>
+                            <a class="contact-link" href="https://www.google.com/url?q=http%3A%2F%2Ftinyurl.com%2F4b9e8jvx&sa=D&sntz=1&usg=AOvVaw1DF493k1Exmy_ZJvHvbiLu">
+                                <img src="/assets/Images/common/viber.png" alt="ns build instagram">
+                            </a>
+                            <a class="contact-link" href="https://www.pinterest.com/nsbuild2024/">
+                                <img src="/assets/Images/common/pinterest.png" alt="ns build instagram">
+                            </a>
+                        </div>
+                    </div>
                 </aside>
             </section>
+            
+            
+
         </div>
 
         <div class="why-us-container">
