--- a/html/navbar.html
+++ b/html/navbar.html
@@ -17,22 +17,22 @@
                 <img src="/assets/Images/common/telephone.png" alt="ns build phone">
                 <span>087 771 7700</span>
             </a>
-            <a href="https://www.facebook.com/profile.php?id=61555637235665">
+            <a class="nav-info-link" href="https://www.facebook.com/profile.php?id=61555637235665">
                 <img src="/assets/Images/common/facebook.png" alt="ns build facebook">
             </a>
-            <a href="https://www.instagram.com/ns_build2024/">
+            <a class="nav-info-link" href="https://www.instagram.com/ns_build2024/">
                 <img src="/assets/Images/common/instagram.png" alt="ns build instagram">
             </a>
-            <a href="https://chat.whatsapp.com/JNpcU5lR4ae3tDnk5HNMDf">
+            <a class="nav-info-link" href="https://chat.whatsapp.com/JNpcU5lR4ae3tDnk5HNMDf">
                 <img src="/assets/Images/common/whatsapp.png" alt="ns build instagram">
             </a>
-            <a href="https://t.me/+xITbG-x6yOVjZGZk">
+            <a class="nav-info-link" href="https://t.me/+xITbG-x6yOVjZGZk">
                 <img src="/assets/Images/common/telegram.png" alt="ns build instagram">
             </a>
-            <a href="https://www.google.com/url?q=http%3A%2F%2Ftinyurl.com%2F4b9e8jvx&sa=D&sntz=1&usg=AOvVaw1DF493k1Exmy_ZJvHvbiLu">
+            <a class="nav-info-link" href="https://www.google.com/url?q=http%3A%2F%2Ftinyurl.com%2F4b9e8jvx&sa=D&sntz=1&usg=AOvVaw1DF493k1Exmy_ZJvHvbiLu">
                 <img src="/assets/Images/common/viber.png" alt="ns build instagram">
             </a>
-            <a href="https://www.pinterest.com/nsbuild2024/">
+            <a class="nav-info-link" href="https://www.pinterest.com/nsbuild2024/">
                 <img src="/assets/Images/common/pinterest.png" alt="ns build instagram">
             </a>
         </nav>
