--- a/html/footer.html
+++ b/html/footer.html
@@ -1,10 +1,12 @@
-<footer>
+<div class="footer">
     <div class="footer-content">
+        <!-- About Us Section -->
         <div class="for-us">
             <img class="logo" src="/assets/Images/common/ns-logo-white.png" alt="NS Stroi Logo">
             <p>Ние в НС Строй се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме с нашият екип от опитни професионалисти.</p>
         </div>
         
+        <!-- Services Section -->
         <div class="services">
             <h3><a href="/html/services.html">УСЛУГИ</a></h3>
             <ul>
@@ -17,6 +19,7 @@
             </ul>
         </div>
         
+        <!-- Contact Information Section -->
         <div class="contact-info">
             <h3><a href="/html/contact.html">КОНТАКТИ</a></h3>
             <ul>
@@ -53,6 +56,7 @@
             </ul>
         </div>
 
+        <!-- Partners Information Section -->
         <div class="partners-info">
             <h3><a href="/html/partners.html">ПАРТНЬОРИ</a></h3>
             <ul>
@@ -66,9 +70,13 @@
             </ul>
         </div>
     </div>
+
+    <!-- Copyright Section -->
     <div class="copyright">
         <p>Всички права запазени &ndash; НС Строй 2024 &copy;</p>
-        <a id="developed-by" href="tel:0877226994"><h3>Изработено от Евелин Първанов</h3></a>
+        <a id="developed-by" href="tel:0877226994">
+            <h3>Изработено от Евелин Първанов</h3>
+        </a>
         <div class="social-links">
             <ul>
                 <li><a href="tel:0877717700"><img src="/assets/Images/common/telephone.png" alt="Phone icon"></a></li>
@@ -78,4 +86,4 @@
             </ul>
         </div>
     </div>
-</footer>
+</div>
