--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </script>
 </head>
 <body>
-    <div id="navbar"></div>
+    <header id="navbar"></header>
 
-    <div class="image-main"> 
+    <div class="home-page-image"> 
         <img src="/assets/Images/common/main-image.jpeg" alt="NS Stroi" id="mainImage">
-        <div class="image-text">
+        <div class="home-page-text-image">
             <h1>Експерти в стройтелната дейност</h1>
             <p><strong>Изграждаме бъдещето, тухла по тухла.</strong></p>
         </div> 
@@ -220,7 +220,7 @@
     </main>
     
 
-    <div id="footer"></div>
+    <footer id="footer"></footer>
     
 </body>
 </html>
